--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -23,7 +23,7 @@ jobs:
       # working-directory: ./example
     - name: Build Web
       run: flutter build web
-      # working-directory: ./example
+      # working-directory: ./example #test
     - name: Deploy
       run: |
         cd build/web
