--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -14,16 +14,16 @@ jobs:
         channel: 'beta' # Currently you have to use beta channel for Flutter web.
     - name: Upgrades flutter
       run: flutter upgrade
-      # working-directory: ./example
+      working-directory: ./
     - name: Enable Web
       run: flutter config --enable-web
-      # working-directory: ./example
+      working-directory: ./
     - name: Install dependencies
       run: flutter packages get
-      # working-directory: ./example
+      working-directory: ./
     - name: Build Web
-      run: flutter build web --release
-      # working-directory: ./example #test
+      run: flutter build web #--release
+      working-directory: ./
     - name: Deploy
       run: |
         cd build/web
