--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,10 +17,13 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  # build_runner: ^1.10.11
-  # build_web_compilers: #^2.16.0
+  google_fonts: ^1.1.1
 
 flutter:
   uses-material-design: true
+
+  assets:
+    - assets/art1.jpg
+    - kk.jpg
 
   
