--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,9 @@ dependencies:
   cupertino_icons: ^1.0.0
   flutter_web_plugins:
     sdk: flutter
+  stacked_themes: ^0.2.2+2
+  lottie: ^0.7.0+1
+  get_it:
 
 dev_dependencies:
   flutter_test:
