--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -16,7 +16,7 @@ jobs:
     - uses: subosito/flutter-action@v1.4.0
       with:
         #flutter-version: '1.12.x'
-        channel: 'dev' # Currently you have to use beta channel for Flutter web.
+        channel: 'beta' # Currently you have to use beta channel for Flutter web.
     - run: flutter upgrade # You also get the latest flutter version
     - run: flutter config --enable-web
     - run: flutter packages get
@@ -25,12 +25,12 @@ jobs:
     - run: ls
       working-directory: /home/runner/work/aboutme/aboutme/build/web
     
-#     - run: cat index.html
-#       working-directory: /home/runner/work/aboutme/aboutme/build/web
-#     - run: sed -i '/base href/d' index.html #For MacOS : sed -i '' '/base href/d' index.html
-#       working-directory: /home/runner/work/aboutme/aboutme/build/web
-#     - run: cat index.html
-#       working-directory: /home/runner/work/aboutme/aboutme/build/web
+    - run: cat index.html
+      working-directory: /home/runner/work/aboutme/aboutme/build/web
+    - run: sed -i '/base href/d' index.html #For MacOS : sed -i '' '/base href/d' index.html
+      working-directory: /home/runner/work/aboutme/aboutme/build/web
+    - run: cat index.html
+      working-directory: /home/runner/work/aboutme/aboutme/build/web
 
     - run: git init
       working-directory: /home/runner/work/aboutme/aboutme/build/web
