--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,10 +23,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+  flutter_web_plugins:
+    sdk: flutter
   auto_route: ^0.6.9
   cupertino_icons: ^1.0.2
   flutter_bloc: ^6.1.3
@@ -38,10 +36,6 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
-# For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
-
-# The following section is specific to Flutter.
 flutter:
 
   # The following line ensures that the Material Icons font is
