--- a/krishnakumar_cn/pubspec.yaml
+++ b/krishnakumar_cn/pubspec.yaml
@@ -11,6 +11,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_web_plugins:
+    sdk: flutter
+  google_fonts: ^2.0.0
 
 
   cupertino_icons: ^1.0.2
