Tech and education section added.

--- a/krishnakumar_cn/pubspec.yaml
+++ b/krishnakumar_cn/pubspec.yaml
@@ -1,5 +1,5 @@
 name: krishnakumar_cn
-description: krishnakumar.cn
+description: krishnakumarcn
 
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
