Added icons and changed title

--- a/krishnakumar_cn/.firebaserc
+++ b/krishnakumar_cn/.firebaserc
@@ -1,5 +1,6 @@
 {
   "projects": {
-    "default": "krishnakumarcn-7512e"
+    "default": "krishnakumarcn-7512e",
+    "release": "krishnakumarcn-7512e"
   }
 }
