--- a/krishnakumar_cn/pubspec.yaml
+++ b/krishnakumar_cn/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   equatable: ^2.0.0
   flutter_bloc: ^7.0.0
+  flutter_svg: ^0.22.0
   google_fonts: ^2.0.0
   url_launcher: ^6.0.3
 
@@ -38,3 +39,4 @@ flutter:
     - assets/icons/stackoverflow.png
     - assets/icons/gmail.png
     - assets/icons/instagram.png
+    - assets/icons/nissan.svg
