Slivers for mobile.

--- a/krishnakumar_cn/pubspec.yaml
+++ b/krishnakumar_cn/pubspec.yaml
@@ -40,3 +40,4 @@ flutter:
     - assets/icons/gmail.png
     - assets/icons/instagram.png
     - assets/icons/nissan.svg
+    - assets/icons/medium.png
