Increased space for intro

--- a/krishnakumar_cn/.firebaserc
+++ b/krishnakumar_cn/.firebaserc
@@ -1,6 +1,7 @@
 {
   "projects": {
     "default": "krishnakumarcn-7512e",
-    "release": "krishnakumarcn-7512e"
+    "release": "krishnakumarcn-7512e",
+    "prod": "krishnakumarcn-7512e"
   }
 }
