--- a/krishnakumar_cn/pubspec.yaml
+++ b/krishnakumar_cn/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   flutter_svg: ^0.22.0
   flutter_sticky_header: ^0.6.0
   google_fonts: ^2.0.0
+  flutter_staggered_grid_view: ^0.4.0
   url_launcher: ^6.0.3
 
 
