dh position change, youtube link

--- a/krishnakumar_cn/pubspec.yaml
+++ b/krishnakumar_cn/pubspec.yaml
@@ -43,3 +43,4 @@ flutter:
     - assets/icons/instagram.png
     - assets/icons/flutter.svg
     - assets/icons/medium.png
+    - assets/icons/youtube.png
